# steam_games_recommender

./: .gitignore  README.md  pyproject.toml
.github/: CODEOWNERS
data/: .gitignore  categories.json  pyproject.toml
data/dbt_project/: .gitignore  profiles.yml
data/dbt_project/models/: games.sql  reviews.sql  sources.yml  tranining_dataset.sql  users.sql
dbt/: .gitignore  dbt_project.yml  duckdb_init.sql  profiles.yml  pyproject.toml
dbt/models/: games.sql  reviews.sql  sources.yml  training_dataset.sql  users.sql
dbt/models/marts/: mart_entities_count.sql  mart_entities_cumulative.sql  mart_entity_daily_counts.sql  mart_game_features.sql  mart_game_features_with_ids.sql  mart_game_features_with_index.sql  mart_game_id_mapping.sql  mart_review_features.sql  mart_user_features.sql  mart_user_id_mapping.sql
dbt/models/marts/dimensions/: dim_games.sql  dim_games_imputed.sql  dim_users.sql  schema.yml
dbt/models/marts/facts/: fact_reviews.sql  schema.yml
dbt/models/marts/mappings/: user_id_mapping.sql
dbt/models/marts/ml_features/: daily_game_metrics.sql  filtered_reviews.sql  game_features.sql  game_rolling_features.sql  monthly_game_metrics.sql  schema.yml  training_features.sql  user_features.sql
dbt/models/snapshots/: games_snapshot.yml
dbt/models/staging/: schema.yml  stg_games.sql  stg_reviews.sql
dbt/models/staging/scraping/: new_ids_to_scrape.sql  non_game_ids.sql
docs/: steam-games-rec.drawio
experiments/: config.py  experiments.yaml  pyproject.toml  run_experiment.py  run_project.py
experiments/base_models/: hello.py  pyproject.toml
experiments/baseline/: generic_recommender.py
experiments/baseline_models/: pyproject.toml
experiments/baseline_models/most_bought/: __main__.py  model.py
experiments/collaborative_filtering/: main.py
experiments/collaborative_filtering/retrieval/: mf.py
experiments/libs/: pyproject.toml
experiments/libs/libs/: model.py  utils.py
experiments/pop_model_baseline/: MLProject  eval.py  main.py  train.py
experiments/random_baseline/: MLProject  train.py
experiments/sklearn_models/: hello.py  pyproject.toml
experiments/tf_models/: hello.py  pyproject.toml
experiments/torch_models/: pyproject.toml
experiments/utils/: data.py
feature_store/: pyproject.toml
feature_store/feature_repo/: example.py  feature_store.yaml  test_workflow.py
feature_store/feature_repo/data/: online.db  registry.db
gamerec/: pyproject.toml
gamerec/src/gamerec/data/: __init__.py  loader.py  split.py
gamerec/src/gamerec/models/pop_model_baseline/: __init__.py  model.py  trainer.py
gamerec/src/gamerec/models/random_model_baseline/: __init__.py  model.py
gamerec/src/gamerec/registry/: models.py
infra/local/: .env  Dockerfile.airflow  Dockerfile.dbt  Dockerfile.firestore  Dockerfile.scraping  Dockerfile.superset  docker-compose.airflow.yml  docker-compose.compute.yml  docker-compose.yml  initdb.sql
notebooks/: data_preprocessing.ipynb  eda.ipynb  experiments.ipynb  pyproject.toml  rag.ipynb  scraped_dataset.ipynb  steam_ids_first_look.ipynb  torchrec_tutorial.ipynb
orchestration/: .gitignore
orchestration/dags/: games_etl.py  pg_embeddings_sync.py  reviews_etl.py  training_features_etl.py  utils.py
orchestration/tests/: test_games_etl.py  test_pg_embeddings_sync.py  test_reviews_etl.py  test_training_features_etl.py  test_utils.py
scraping/: .firebaserc  firebase.json  migrate_firebase_to_psql.py  pyproject.toml
scraping/scripts/: backfill_latest_game_reviews.py  get_all_steam_games.py
scraping/steam_games/: backfill_latest_timestamp_pg.py  backfill_latest_timestamps.py  game_data.py  get_all_steam_games.py  steam_appids.py
scraping/steam_reviews/: backfill_latest_timestamps.py  steam_reviews.py
scraping/utils/: db.py  steam_api.py  text_cleaning.py  views.py
serving/rag_recommender/: main.py  retrieval.py
src/gamerec/data/: __init__.py  loader.py
