[project]
name = "steam-games-recommender"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dbt = [
    "dbt-duckdb>=1.9.3",
]
notebooks = [
    "duckdb>=1.3.2",
    "fbgemm-gpu>=1.2.0",
    "jupyter>=1.1.1",
    "langchain>=0.3.27",
    "matplotlib>=3.9.2",
    "notebook>=7.0.7",
    "polars[pyarrow]>=1.30.0",
    "pyarrow>=20.0.0",
    "s3fs>=2025.7.0",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.0",
    "torch>=2.7.1",
    "torchmetrics>=1.0.3",
    "torchrec>=1.2.0",
]
scraping = [
    "bs4>=0.0.2",
    "google-cloud-firestore>=2.21.0",
    "polars>=1.30.0",
    "requests>=2.32.4",
    "duckdb>=1.3.2",
    "pyarrow>=21.0.0",
]
orchestration = [
    "apache-airflow==3.0.4"
]