[project]
name = "notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.3.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "notebook>=7.0.7",
    "polars[pyarrow]>=1.30.0",
    "seaborn>=0.13.2",
]
