[project]
name = "scraping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-cloud-firestore>=2.21.0",
    "polars>=1.30.0",
    "requests>=2.32.4",
]

[dependency-groups]
duckdb = [
    "duckdb>=1.3.2",
    "pyarrow>=21.0.0",
]
